log
Fri, May 16, 2025 10:36:07 AM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Fri, May 16, 2025 10:38:50 AM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
cc8278d
Fri, May 16, 2025 10:39:12 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9b63e10
Fri, May 16, 2025 10:40:22 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3400cd7
Fri, May 16, 2025 10:43:22 AM: 
 sudoku.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  2|4
total_score: 15/70
cd41d22
Fri, May 16, 2025 10:52:14 AM: 
 sudoku.c | 41 +++++++++++++++++++++++++++++++++++++++--
 1 file changed, 39 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
5d975b4
Fri, May 16, 2025 10:55:05 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
423639a
Fri, May 16, 2025 11:25:35 PM: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|2
total_score: 45/70
4132e33
Fri, May 16, 2025 11:39:19 PM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  6|2
total_score: 45/70
7292061
Fri, May 16, 2025 11:44:18 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
dd3a4d3
Sat, May 17, 2025 12:15:04 AM: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:147:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return 1;
            ^
cc1.exe: all warnings being treated as errors
656e012
Sat, May 17, 2025 12:17:09 AM: 
 sudoku.c | 33 ++++++++++++++-------------------
 1 file changed, 14 insertions(+), 19 deletions(-)
 tests:  7|1
total_score: 55/70
ac0af6e
Sat, May 17, 2025 12:22:49 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:133:13: error: 'return' with no value, in function returning non-void [-Werror]
             return;
             ^~~~~~
sudoku.c:124:7: note: declared here
 Node* DFS(Node* initial, int* cont){
       ^~~
cc1.exe: all warnings being treated as errors
beb089b
Sat, May 17, 2025 12:27:09 AM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 55/70
08665e7
